--- a/crates/uv-resolver/Cargo.toml
+++ b/crates/uv-resolver/Cargo.toml
@@ -39,9 +39,12 @@ uv-small-str = { workspace = true }
 uv-static = { workspace = true }
 uv-torch = { workspace = true }
 uv-types = { workspace = true }
+uv-variants = { workspace = true }
 uv-warnings = { workspace = true }
 uv-workspace = { workspace = true }
 
+# TODO(konsti): no anyhow plz rlly
+anyhow = { workspace = true }
 arcstr = { workspace = true }
 clap = { workspace = true, features = ["derive"], optional = true }
 dashmap = { workspace = true }
