--- a/crates/uv/Cargo.toml
+++ b/crates/uv/Cargo.toml
@@ -54,6 +54,7 @@ uv-tool = { workspace = true }
 uv-torch = { workspace = true }
 uv-trampoline-builder = { workspace = true }
 uv-types = { workspace = true }
+uv-variants = { workspace = true }
 uv-version = { workspace = true }
 uv-virtualenv = { workspace = true }
 uv-warnings = { workspace = true }
